2014-09-20
- Added Undying Flesh Golem
- Added Visage Familiar

2014-09-19
- Added Medallion of Courage to debuffs section.
- Added Undying Decay.
- Added Bristleback Bristleback.

2014-09-18
- Added Heart of Tarrasque passive health regen.
- Fixed enemies not being set to the correct tab.
- Fixed unit enemy tab not being set.
- Fixed Invoker Alacrity not working.

2014-09-14
- Small ui tweaks and ui code refactored.
- Fixed padding and margins when in side by side view (now called Fullscreen).
- Added panel highlight effect when hovering over tabs to show which tab panels are active.
- Each hero tab now has a corresponding unit tab that can be shown or hidden using a checkbox option.
- Illusion tabs can also be added for each hero tab. Previously only the main hero tabs had unit and illusion tabs.

2014-09-11
- Fixed armor reduction abilities in debuffs section not being taken into account.

2014-09-10
- Fixed saved builds not loading.

2014-09-08
- Added damage calculator for Techies' abilities.

2014-09-07
- Fixed ability details calculator not working.

2014-08-30
- Fixed dps calculation error.

2014-08-27
- Added Techies.

2014-08-26
- Added Weaver Geminate Attack.

2014-08-08
- Added Clinkz Death Pact.

2014-08-07
- Items added to buff and debuff sections.
- Started implementing logic for non-stacking auras and things that should/shouldn't stack, e.g. bonus armor auras.

2014-08-06
- Added Lone Druid Battle Cry.

2014-08-04
- Ring of Basilius mana regen.

2014-07-31
- Fixed Power Treads description.

2014-07-30
- Fixed physical resistance calculation for negative armor.
- Fixed magic resistance calculation.

2014-07-29
- Added Wisp Overcharge buff.
- Added Slark Shadow Dance calculations.
- Added Earthshaker enchant totem calculation.
- Crystal Maiden Freezing Field Aghanim's effect now taken into account.

2014-07-28
- Medusa split shot damage reduction now taken into account.

2014-07-26